--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
     "express": "^4.19.2",
     "gm": "^1.25.0",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.1",
     "nodemailer": "^6.9.14",
     "postgres": "^3.4.4",
     "qrcode": "^1.5.3",
