--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ node_modules
 .env.local
 .env.*.local
 
+# skip ignoring production env as its used in build on prod server
+!client/.env.production
+
 # Log files
 npm-debug.log*
 yarn-debug.log*
