--- a/api/package.json
+++ b/api/package.json
@@ -23,6 +23,7 @@
     "nodemailer": "^6.9.14",
     "postgres": "^3.4.4",
     "qrcode": "^1.5.3",
+    "stripe": "^16.5.0",
     "uuid": "^9.0.1"
   }
 }
