--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
+    "@stripe/stripe-js": "^4.1.0",
     "axios": "^1.7.2",
     "core-js": "^3.37.1",
     "file-saver": "^2.0.5",
