--- a/api/package.json
+++ b/api/package.json
@@ -16,14 +16,17 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "exceljs": "^4.4.0",
-    "express": "^4.19.2",
+    "express": "^4.20.0",
     "gm": "^1.25.0",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.1",
-    "nodemailer": "^6.9.14",
+    "nodemailer": "^6.9.15",
     "postgres": "^3.4.4",
-    "qrcode": "^1.5.3",
-    "stripe": "^16.5.0",
+    "qrcode": "^1.5.4",
+    "stripe": "^16.10.0",
     "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
